# bevy_gstreamer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: camera.rs
src/: camera.rs  capture.rs  error.rs  lib.rs  types.rs
src/camera/: background.rs
