[package]
name = "bevy_gstreamer"
authors = ["FoxZoOL <zhooul@gmail.com>"]
version = "0.4.0"
edition = "2021"
description = "GStreamer plugin for Bevy"
keywords = ["camera", "webcam", "capture", "cross-platform", "gstreamer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_gstreamer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_asset", "bevy_winit", "bevy_pbr", "x11"] }
thiserror = "1.0"
gstreamer = "0.22.1"
gstreamer-app = "0.22.0"
gstreamer-video = "0.22.1"
glib = "0.19.2"
crossbeam = "0.8"
image = { version = "0.24", features = ["jpeg"] }
jpeg-decoder = "0.3.0"
bytemuck = { version = "1.13", features = ["derive"] }
regex = "1.7"

[[example]]
name = "camera"
path = "examples/camera.rs"

[dev-dependencies]
bevy = { version = "0.13.0" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3