[package]
name = "bevy_gstreamer"
authors = ["FoxZoOL <zhooul@gmail.com>"]
version = "0.7.0"
edition = "2024"
description = "GStreamer plugin for Bevy"
keywords = ["camera", "webcam", "capture", "cross-platform", "gstreamer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_gstreamer"
homepage = "https://github.com/foxzool/bevy_gstreamer"
documentation = "https://docs.rs/bevy_gstreamer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_asset", "bevy_winit", "bevy_pbr", "wayland"] }
thiserror = "1.0"
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
gstreamer-video = "0.23.2"
glib = "0.20.4"
image = { version = "0.25", features = ["jpeg"] }
jpeg-decoder = "0.3.0"
bytemuck = { version = "1.13", features = ["derive"] }
regex = "1.7"

[[example]]
name = "camera"
path = "examples/camera.rs"

[dev-dependencies]
bevy = { version = "0.16" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3